[tool.poetry]
name = "pubmed-fetcher"
version = "0.1.0"
description = ""
authors = ["TarunBasediya <tarunbasediya020@gmail.com>"]  # FIXED
readme = "README.md"
packages = [{ include = "src" }]  


[tool.poetry.scripts]
get-papers-list = "src.cli:app"


[tool.poetry.dependencies]
python = ">=3.10"
requests = ">=2.32.3,<3.0.0"
pandas = ">=2.2.3,<3.0.0"
typer = ">=0.15.2,<0.16.0"
rich = ">=13.9.4,<14.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
